Added Preloader on page load

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.17.1",
+    "jquery": "^3.5.1",
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-gradient": "^1.0.2",
     "react-hamburger-menu": "^1.2.1",
-    "react-photo-gallery": "^8.0.0",
+    "react-lottie": "^1.2.3",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
