--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-twitch-embed-video": "^2.0.4",
     "uuid": "^8.3.0"
   },
   "scripts": {
