--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "env-cmd -f .env react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
